2007-05-18  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/SOGo/NSArray+Utilities.m ([NSMutableArray
	-addObjectUniquely:object]): new method with an explicit name.

	* SoObjects/SOGo/SOGoObject.m ([SOGoObject -aclUsers]): renamed
	"acl" to "aclUsers". Now designed to return only the uid of the
	users involved in an ACL.
	([SOGoObject -hasSupportForDefaultRoles]): new method returning
	"NO" by default. To indicate to the acl editor that we don't want
	to handle a default user.

	* SoObjects/SOGo/SOGoPermissions.[hm]: added the
	SOGoRole_ObjectReader, SOGoRole_Folder*, and SOGoMailRole_*
	symbols.

	* UI/MailerUI/UIxMailUserRightsEditor.[hm]: new class module that
	provides a view to the IMAP acls.

	* UI/MailerUI/UIxMailFolderACLEditor.m: removed obsolete module.

	* UI/WebServerResources/MailerUI.js: replaced all invocations of
	addEventListener to the use of prototype's Event object. Also,
	configured all menus programmatically following descriptions lists
	containing their callbacks, or nulls, submenus id or separators.

2007-05-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/Common/UIxObjectActions.m ([UIxObjectActions
	-addUserInAclsAction]): save the previous roles of the user
	(unlikely) or the default roles, or None instead of saving the
	roles that should appear the first time in the role editor when no
	default has been set...

	* SoObjects/SOGo/SOGoObject.m: defined a new constant
	"SOGoDefaultUserID".

	* SoObjects/SOGo/SOGoFolder.m ([SOGoFolder
	-setRoles:rolesforUser:uidforObjectAtPath:objectPathArray]):
	ignore the "AuthorizedSubscriber" role and add the "None" role
	when no other role is found.

	* UI/Common/UIxAclEditor.m: added a button for the new default
	user roles feature.

	* UI/Common/UIxUserRightsEditor.m ([UIxUserRightsEditor
	-_initRights]): don't take the "None" role into account when
	initializing the list of current roles.

	* SoObjects/SOGo/SOGoPermissions.m: added a new void role
	"SOGoRole_None".
